# Cyberpatriot-Scoreboard

./: main.py  pyproject.toml
static/styles/: style.css
templates/: index.html
